# Brevo

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/config/: settings.py
app/core/: ai.py
app/routers/: brevo_router.py  example_router.py  trigger_router.py
app/schemas/: brevo_schema.py  trigger_schema.py
app/services/: brevo_service.py  email_trigger_service.py  example_service.py
app/templates/: agent_trade.html  api_reminder.html  base.html  onboarding_reminder.html  welcome.html
tests/: test_brevo_direct.py  test_trigger_service.py
